# pion

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  apion.html  controller.html  genindex.html  graph.py  index.html  install_pion_server.py  new_test.py  objects.inv  open_project.sh  pio.html  pion.html  pion_server.py  proto_test.py  pyproject.toml  readme_generator.py  search.html  searchindex.js  setup.py  setup_all.py  sim2dtest.py  simtest.py  simulator.html  spion.html  swarmcommunicator.html  test.py  test3.py  test_async.py  test_gpion.py  test_local.py  test_sim.py  test_visual.py
.doctrees/: apion.doctree  controller.doctree  environment.pickle  index.doctree  pio.doctree  pion.doctree  simulator.doctree  spion.doctree  swarmcommunicator.doctree
.doctrees/examples/: camera.doctree  first_flight.doctree  index.doctree  swarmsimulator.doctree
.doctrees/user/: install.doctree  linux.doctree  macos.doctree  windows.doctree
.github/workflows/: ci-tests.yml  documentation.yml  wheels.yml
_sources/: controller.rst.txt  index.rst.txt  pio.rst.txt  simulator.rst.txt  swarmcommunicator.rst.txt
_sources/examples/: first_flight.rst.txt  index.rst.txt
_sources/user/: install.rst.txt  linux.rst.txt
_static/: documentation_options.js
description/: apion.md  controller.md  functions.md  pio.md  pion.md  readme_apion.md  readme_simulator.md  readme_spion.md  simulator.md  spion.md  test.md
discription/: apion.md  pio.md  pion.md  simulator.md  spion.md
docs/: apion.md  controller.md  functions.md  pio.md  pion.md  simulator.md  spion.md  test.md
docs/source/: apion.rst  conf.py  controller.rst  index.rst  pion.rst  spion.rst  usage.rst
docs/source/examples/: camera.rst  first_flight.rst  index.rst  swarmsimulator.rst
docs/source/user/: linux.rst  macos.rst  windows.rst
examples/: camera.html  first_flight.html  index.html  swarmsimulator.html
install_scripts/: install_linux.sh  install_macos.sh  install_windows.bat
pion/: __init__.py  annotation.py  apion.py  commands.py  control_server.py  controller.py  cython_pid.c  cython_pid.pyx  datagram.proto  datagram.py  datagram_pb2.py  drone.py  functions.py  gpion.py  pio.py  pion.py  server.py  simulator.py  spion.py
pion/tests/: test_spion.py
scripts/: 4xSimWriter.py  4xvserver.py  analyze.py  asynctest.py  auto_reloader.py  drones_config.json  gl.py  graph.py  install_linux.sh  install_macos.sh  install_pion_server.py  install_windows.bat  mission_script.txt  multistart.bash  multistart_sim.bash  multistart_sim_g2.bash  new_test.py  open_project.sh  parameters.txt  pion_server.py  pion_swarm_radxa_install.sh  proto_test.py  readme_generator.py  setup_all.py  sim2dtest.py  sim4xvis.py  simconsole.py  simtest.py  simtestswarm.py  test.py  test_gpion.py  test_local.py  test_visual.py  vserver.py
scripts/examples/: camera.py  pion_trajectory_save.py  pion_trajectory_tracking.py  simtest.py  simtest_udp.py  swarmsim_example.py
scripts/examples/practical_examples/: arm_land.py  circle_tracking.py
src/pion/: __init__.py  annotation.py  apion.py  controller.py  cython_pid.pyx  functions.py  gpion.py  pio.py  pion.py  simulator.py  spion.py  trajectory.py
src/pion/scripts/: datac.py
src/pionfunc/: annotation.py  functions.py
src/swarm_server/: __init__.py  commands.py  control_server.py  datagram.proto  datagram.py  datagram_pb2.py  server.py  swarmsim.py  udpmulticast.py
src/swarm_server/scripts/: params.py  server_radxa.py  server_raspberry.py  server_sim.py  server_uni.py
tests/: test_pion.py  test_spion.py  test_swarmsim.py  test_udpmulticast.py
user/: install.html  linux.html  macos.html  windows.html
