[build-system]
requires = ["setuptools>=75", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pion"
version = "0.0.1"
description = "This module is needed to control drondes"
requires-python = ">=3.10"
authors = [
    {name = "Michael", email = "onisoris@yandex.ru"},
]
maintainers = [
    {name = "Michael", email = "onisoris@yandex.ru"}
]
dependencies = [
    "numpy>=2.0.2",
    "paramiko>=3.5.1",
    "protobuf==5.29.3",
    "pymavlink>=2.4.42",
    "pyserial>=3.5",
    "rich>=13.9.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Independent Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/OnisOris/pion"
Documentation = "https://onisoris.github.io/pion"
Repository = "https://github.com/OnisOris/pion.git"
Issues = "https://github.com/OnisOris/pion/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "ruff>=0.9.10",
    "sphinx>=8.1.3",
    "uv>=0.6.5",
]

[tool.uv.workspace]
members = ["numbers"]
