[build-system]
requires = ["setuptools>=75", "wheel", "Cython", "numpy>=2.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pionsdk"
version = "0.0.1"
description = "This module is needed to control drondes"
requires-python = ">=3.10"
authors = [
    {name = "Michael", email = "onisoris@yandex.ru"},
]
maintainers = [
    {name = "Michael", email = "onisoris@yandex.ru"}
]
dependencies = [
    "numpy>=1.22.0,<2.0.0; implementation_name=='pypy'",
    "numpy>=2.1.0; implementation_name!='pypy'",
    "paramiko>=3.5.1",
    "protobuf==5.29.3",
    "pymavlink>=2.4.42",
    "pyserial>=3.5",
    "rich>=13.9.4",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Independent Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
license-files = ["LICENSE"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/OnisOris/pion"
Documentation = "https://onisoris.github.io/pion"
Repository = "https://github.com/OnisOris/pion.git"
Issues = "https://github.com/OnisOris/pion/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pre-commit>=4.2.0",
    "ruff>=0.9.10",
    "sphinx>=8.1.3",
    "uv>=0.6.5",
]

[tool.uv.workspace]
members = ["numbers"]


[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
  "I",      # isort
  "D205",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cibuildwheel]
skip = [
    "pp311-win*",
    "*-manylinux_i686"
]
build = "cp313-* pp313-*"
test-skip = "*"

[tool.cibuildwheel.environment.arm64]
NPY_BLAS_ORDER = "openblas"
NPY_LAPACK_ORDER = "openblas"
